Sync all content

--- a/content/pages/p4.md
+++ b/content/pages/p4.md
@@ -9,7 +9,7 @@ uid: 4dd6b3ff-dffd-4364-8049-8b0e2be2e037
 
 Here are some external links to test:
 
-- [MIT Websitsse](https://mit.edu/rachu)
-- [OCW ssMain](https://ocw.mit.edu/raichu)
-- [sss](https://gogs.com/)
-- [GitHssub](https://gutgut.com/)
+- {{% resource_link "f0fe3a04-75b8-40ab-8cd4-206d70dec63e" "MIT Websitsse" %}}
+- {{% resource_link "f17cadf3-f158-4264-aedd-0f3aa00a272f" "OCW ssMain" %}}
+- {{% resource_link "fcbe4f98-4d05-447f-9219-c1f209baa41d" "sss" %}}
+- {{% resource_link "662c179a-0886-4efb-abc9-1c96955196eb" "GitHssub" %}}
